    . vpDisplay::displayCharString() is marked deprecated. Use vpDisplay::displayText() instead
    . vpHinkley class is deprecated, in favor of vpStatisticalTestHinkley
  - New features and improvements
    . Introduce Python bindings for most of ViSP modules and classes (see corresponding tutorial)
    . Updated Dockerfile in ci/docker folder for Ubuntu 18.04, 20.04 and 22.04. Corresponding images are also available
      ready to use on DockerHub https://hub.docker.com/repository/docker/vispci/vispci/general
    . OpenCV 2.4.8 is the minimal supported version
    . Introduce applications in apps folder, a collection of useful tools that
      have a dependency to the install target
    . Speed up build by including only opencv2/opencv_modules.hpp instead of opencv2/opencv.hpp header in vpConfig.h
    . In imgproc module, implementation of automatic gamma factor computation methods for gamma correction.
    . Eliminate the use of pthread in favour of std::thread
    . RGB or RGBa to/from HSV conversion optimization in vpImageConvert class
    . New vpImageTools::inRange() functions to ease binary mask computation by thresholding HSV channels
    . New tutorials in tutorial/segmentation/color folder to show how to use HSV color segmentation to
      extract the corresponding point cloud
  - Applications
    . Migrate eye-to-hand tutorials in apps
  - Tutorials
    . Update tutorial: How to use Blender to generate simulated data for model-based tracking
      experiments with step by step detailed explanations
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-tracking-mb-generic-rgbd-Blender.html
    . New tutorial: Installation from prebuilt Conda packages for Linux / OSX / Windows
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-install-conda-package.html
    . New tutorial: Using Statistical Process Control to monitor your signal
      https://visp-doc.inria.fr/doxygen/visp-daily/tutorial-spc.html