@@ -680,3 +680,12 @@ doi = {10.1109/TPAMI.2006.153}
   author = {Labb\'e, Yann and Manuelli, Lucas and Mousavian, Arsalan and Tyree, Stephen and Birchfield, Stan and Tremblay, Jonathan and Carpentier, Justin and Aubry, Mathieu and Fox, Dieter and Sivic, Josef},
   date = {2022}
 }
+
+@InProceedings{Oliva22c,
+   Author = {Oliva, A. and Spindler, F. and Robuffo Giordano, P. and Chaumette, F.},
+   Title = {{A Dynamic Simulator for the Franka Emika Robot with Visual-Servoing Enabled Capabilities}},
+   BookTitle = {Int. Conf. on Control, Automation, Robotics and Vision, ICARCV'22},
+   Address = {Singapore},
+   Month = {December},
+   Year = {2022}
+}
