@@ -1,4 +1,4 @@
-/*! \page tutorial_python_new ViSP for Python
+/*! \page tutorial_python ViSP for Python
 
 This page introduces the user to the way to exploit ViSP with Python.
 
