@@ -24,6 +24,7 @@ ViSP 3.x.x (Version in development)
     . vpHinkley class is deprecated, in favor of vpStatisticalTestHinkley
   - New features and improvements
     . Introduce Python bindings for most of ViSP modules and classes (see corresponding tutorial)
+    . New specific documentation for Python bindings in https://visp-doc.inria.fr/doxygen/visp-python-daily/
     . Updated Dockerfile in ci/docker folder for Ubuntu 18.04, 20.04 and 22.04. Corresponding images are also available
       ready to use on DockerHub https://hub.docker.com/repository/docker/vispci/vispci/general
     . OpenCV 2.4.8 is the minimal supported version
